--- a/results/results.css
+++ b/results/results.css
@@ -2,3 +2,23 @@
     display: flex;
     flex-direction: column;
 }
+
+td {
+    border: solid yellow 1px;
+    font-weight: bolder;
+    color: yellow;
+    font-size: large;
+}
+
+body{
+    background-image: url(https://cdn.arstechnica.net/wp-content/uploads/2020/07/pokemon-go-masks-760x380.jpg);
+}
+
+h1{
+    color:yellow;
+    font-size: larger;
+}
+
+tr{
+    color: yellow;
+}
